Bug 254033 - [IFC] Fix a typo in InlineFormattingGeometry:previousDisplayBoxIndex/nextDisplayBoxIndex
Summary: [IFC] Fix a typo in InlineFormattingGeometry:previousDisplayBoxIndex/nextDisp...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-16 10:25 PDT by zalan
Modified: 2023-03-16 17:02 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.92 KB, patch)
2023-03-16 10:26 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-16 10:25:53 PDT
canidateBox -> candidateBox
Comment 1 zalan 2023-03-16 10:26:54 PDT
Created attachment 465463 [details]
Patch
Comment 2 EWS 2023-03-16 17:01:50 PDT
Committed 261777@main (928823f2c57f): <https://commits.webkit.org/261777@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465463 [details].
Comment 3 Radar WebKit Bug Importer 2023-03-16 17:02:17 PDT
<rdar://problem/106834520>