[IFC] Fix a typo in InlineFormattingGeometry:previousDisplayBoxIndex/nextDisplayBoxIndex https://bugs.webkit.org/show_bug.cgi?id=254033

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::previousDisplayBoxIndex):
(WebCore::Layout::nextDisplayBoxIndex):

Canonical link: https://commits.webkit.org/261777@main